Downgrade project configurations and build scripts to JDK 17